# bitnet-mlx.rs

./: .gitignore  AI_MODEL_TRAINING_RESEARCH_GUIDE.md  BITNET.md  BITNET_TENSOR.md  CLI_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_BITNET_ROADMAP.md  COMPREHENSIVE_TODO.md  Cargo.toml  DAY_10_11_COMPLETION_REPORT.md  DAY_1_2_COMPLETION_REPORT.md  DAY_7_COMPLETION_REPORT.md  DAY_8_9_COMPLETION_REPORT.md  DOCKER_BITNET_SWARM_TODO.md  MLX_FEATURE_FLAGS_SUMMARY.md  NEXT_STEPS_ROADMAP.md  PHASE_3_2_COMPLETE.md  PHASE_3_3_COMPLETE.md  PHASE_5_IMPLEMENTATION_PLAN.md  README.md  ROAD_TO_INFERENCE.md  SERVERLESS_MCP_TOOLS_TODO.md  SPARC_TASK_1_1_2_ARCHITECTURE.md  SPARC_TASK_1_1_2_COMPLETION.md  SPARC_TASK_1_1_2_PSEUDOCODE.md  SPARC_TASK_1_1_2_REFINEMENT.md  SPARC_TASK_1_1_2_SPECIFICATION.md  Test_Suite_Completion_Report.md  completion.md  cpu_performance_diagnostic_sheet.md  phase_3_3_integration_test.rs  rust-toolchain.toml  test_device_functions.rs  test_shader_compilation.rs  test_status_summary.md  test_ste_concept.rs  uuid_test.rs
bitnet-benchmarks/: Cargo.toml  Criterion.toml  PERFORMANCE_TESTING_GUIDE.md  README.md
bitnet-benchmarks/benches/: comprehensive_performance_comparison.rs  energy_efficiency_comparison.rs  gpu_performance.rs  mlx_vs_candle.rs  packing_performance.rs  quantization.rs  quantization_performance.rs  regression_performance_tests.rs  simd_performance.rs  simd_unpacking_performance.rs  tensor_acceleration_comprehensive.rs  tensor_operations_comprehensive.rs  tensor_performance.rs  test_minimal.rs
bitnet-benchmarks/recent_benchmark_results/: benchmark_results_20250724_200251.csv  benchmark_results_20250724_200251.json  comparison_summary_20250724_200251.md
bitnet-benchmarks/src/: candle_ops.rs  comparison.rs  lib.rs  main.rs  runner.rs  visualization.rs
bitnet-benchmarks/tests/: integration_tests.rs
bitnet-cli/: Cargo.toml  README.md
bitnet-cli/src/: config.rs  config_bak.rs  error.rs  inference.rs  main.rs
bitnet-core/: Cargo.toml  README.md
bitnet-core/benches/: cpu_simd_kernels.rs
bitnet-core/examples/: advanced_gpu_memory_demo.rs  arithmetic_operations_demo.rs  cleanup_system_demo.rs  execution_path_demo.rs  linear_algebra_demo.rs  linear_algebra_demo_simple.rs  memory_efficient_conversion_demo.rs  memory_tracking_demo.rs  mixed_precision_demo.rs  mlx_acceleration_demo.rs  mlx_graph_optimization_demo.rs  mlx_operations_demo.rs  mlx_optimization_demo.rs  mlx_performance_comparison_demo.rs  shader_compilation_demo.rs  task_1_7_1_optimization_demo.rs  tensor_lifecycle.rs  tensor_shape_operations_demo.rs  tokenizer_demo.rs
bitnet-core/src/: execution.rs  lib.rs
bitnet-core/tests/: ENCODING_DECODING_TESTS.md  README.md  advanced_gpu_memory_tests.rs  array_conversion_tests.rs  batch_processing_tests.rs  bitnet_compute_pipeline_tests.rs  buffer_creation_destruction_tests.rs  cleanup_system_tests.rs  comprehensive_shader_compilation_tests.rs  compute_pipeline_integration_tests.rs  compute_pipeline_test_runner.rs  compute_pipeline_tests.rs  cpu_performance_test.rs  device_comparison_tests.rs  device_functions_integration_test.rs  encoding_decoding_correctness_tests.rs  error_formatting_tests.rs  execution_path_tests.rs  infrastructure_validation.rs  integration_test.rs  memory_efficient_conversion_tests.rs  memory_fragmentation_prevention_tests.rs  memory_tracking_tests.rs  metal_device_availability_tests.rs  metal_shader_compilation_tests.rs  metal_tensor_acceleration_tests.rs  mlx_availability_tests.rs  operation_correctness_tests.rs  optimized_memory_tracking_test.rs  shader_compilation_edge_cases.rs  shader_compilation_integration_test.rs  shader_compilation_performance_tests.rs  simd_dispatch_integration_tests.rs  special_token_handling_tests.rs  tensor_arithmetic_operations_tests.rs  tensor_core_tests.rs  tensor_core_tests_new.rs  tensor_device_migration_tests.rs  tensor_integration_tests.rs  tensor_linear_algebra_tests.rs  (+7 more)
bitnet-cuda/: Cargo.toml  README.md  build.rs
bitnet-cuda/examples/: w2a8_gemv_demo.rs
bitnet-cuda/src/: backend.rs  error.rs  lib.rs  memory.rs  stream.rs
bitnet-docker/agent-config-framework/: Cargo.toml  README.md  demo.sh  framework-config.toml
bitnet-inference/: Cargo.toml  MODEL_LOADING_GUIDE.md  README.md
bitnet-inference/benches/: backend_performance_comparison.rs  comprehensive_benchmarks.rs  inference_benchmarks.rs  performance_analysis.rs
bitnet-inference/examples/: analyze_microsoft_metadata.rs  bitnet_config_test.rs  day10_performance_optimization.rs  day4_performance_profiling.rs  day5_memory_management_optimization.rs  day6_model_loading_caching.rs  day7_batch_processing.rs  day8_gpu_optimization.rs  day9_api_integration_testing.rs  enhanced_tokenizer_demo.rs  forward_pass_test.rs  gguf_debug.rs  gguf_model_loading.rs  huggingface_loading_demo.rs  inference_integration_test.rs  layer_factory_test.rs  model_accuracy_validator.rs  task_2_1_22_real_model_testing.rs  task_3_1_1_complete_example.rs  tasks_5_1_1_demo.rs  test_task_5_1_1_validation.rs  text_generation_demo.rs  tokenizer_and_input_processing.rs  week3_advanced_gpu_optimization.rs  weight_organization_test.rs  weight_verification.rs
bitnet-inference/shaders/: advanced_gpu_optimization.metal  bitlinear_inference.metal
bitnet-inference/src/: benchmark_datasets.rs  bitnet_config.rs  error.rs  gguf.rs  gguf_backup.rs  huggingface.rs  input_processing.rs  lib.rs  reference_outputs.rs  tokenizer.rs
bitnet-inference/tests/: advanced_generation_tests.rs  day5_memory_management_tests.rs  day8_gpu_optimization.rs  (+13 more)
bitnet-intelligence/: Cargo.toml
bitnet-metal/: Cargo.toml  README.md
bitnet-quant/: CONFIGURATION_GUIDE.md  Cargo.toml  ERROR_HANDLING_GUIDE.md  PRECISION_CONTROL_GUIDE.md  README.md  README_PACKING.md  README_SIMD_UNPACKING.md  phase_3_3_validation
bitnet-training/: Cargo.toml  README.md
examples/: Cargo.toml  README.md  adaptive_tensor_pool_demo.rs  bitlinear_tensor_demo.rs  bitnet_layer_tensor_demo.rs  mps_integration_demo.rs  phase_3_3_validation.rs  round_clip_demo.rs  simd_dispatch_demo.rs  tensor_shape_operations_demo.rs
(+593 files in other folders)
