[workspace]
resolver = "2"
members = [
    "bitnet-core",
    "bitnet-quant",
    "bitnet-metal",
    "bitnet-cuda",
    "bitnet-inference",
    "bitnet-training",
    "bitnet-cli",
    "bitnet-benchmarks"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["BitNet Rust Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wavegoodvybe2929/bitnet-rust"
homepage = "https://github.com/Wavegoodvybe2929/bitnet-rust"
documentation = "https://docs.rs/bitnet-rust"
description = "Pure Rust implementation of BitNet for Apple Silicon"
keywords = ["bitnet", "quantization", "neural-networks", "apple-silicon", "metal"]
categories = ["science"]

[workspace.dependencies]
# Core dependencies
mlx-rs = "0.25"
candle-core = { version = "0.8", features = ["metal", "accelerate"] }
candle-nn = "0.8"
candle-transformers = "0.8"
metal = "0.27.0"
tokenizers = "0.15"
hf-hub = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Force compatible versions to avoid cocoa conflicts
objc = "0.2"
cocoa = "0.25"
core-foundation = "0.10"
core-graphics = "0.23"

# macOS-specific dependencies moved to individual crate manifests

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Optional dependencies for features
rayon = "1.7"
tracing = "0.1"
rand = "0.8"
num_cpus = "1.0"
glob = "0.3"

[profile.dev]
lto = false

[profile.release]
lto = false