[package]
name = "bitnet-benchmarks"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Comprehensive benchmarking suite for BitNet implementation"
keywords = ["bitnet", "benchmarks", "performance", "neural-networks"]
categories = ["science", "development-tools"]

[[bin]]
name = "bitnet-benchmarks"
path = "src/main.rs"

[features]
default = ["std"]
std = []
# Enable Metal benchmarks (temporarily disabled due to dependency issues)
# metal = ["bitnet-metal"]
# Enable training benchmarks (temporarily disabled due to dependency issues)
# training = ["bitnet-training"]
# Enable memory profiling
memory = ["dep:tikv-jemallocator"]
# Enable MLX benchmarks
mlx = ["bitnet-core/mlx"]

[dependencies]
bitnet-core = { path = "../bitnet-core", version = ">=0.1.0, <0.3.0" }
bitnet-quant = { path = "../bitnet-quant", version = ">=0.1.0, <0.3.0" }
# bitnet-inference = { path = "../bitnet-inference", version = "0.1.0" }
# bitnet-metal = { path = "../bitnet-metal", version = "0.1.0", optional = true }
# bitnet-training = { path = "../bitnet-training", version = "0.1.0", optional = true }

# Benchmarking framework
criterion.workspace = true
# criterion-perf-events = "0.4"  # Disabled due to macOS compatibility issues

# Core dependencies
candle-core.workspace = true
serde.workspace = true
serde_json = "1.0"
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Test data generation
rand = "0.8"
rand_distr = "0.4"

# Memory profiling
tikv-jemallocator = { version = "0.5", optional = true }

# System metrics
sysinfo = "0.30"

# Utilities
tracing = { workspace = true }

[dev-dependencies]
proptest.workspace = true
