[package]
name = "bitnet-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for BitNet model operations"
keywords = ["bitnet", "cli", "neural-networks", "command-line"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "bitnet"
path = "src/main.rs"

[features]
default = ["full"]
# Enable all features (temporarily reduced due to dependency issues)
full = ["conversion"]
# Enable inference commands (temporarily disabled due to dependency issues)
# inference = ["bitnet-inference/generation", "bitnet-inference/tokenizers"]
# Enable training commands (temporarily disabled due to dependency issues)
# training = ["bitnet-training/qat", "bitnet-training/peft"]
# Enable model conversion
conversion = ["dep:safetensors"]
# Enable benchmarking commands (temporarily disabled due to dependency issues)
# benchmark = ["bitnet-benchmarks"]
# Enable Metal acceleration (temporarily disabled due to dependency issues)
# metal = ["bitnet-inference/metal", "bitnet-training/metal"]

[dependencies]
bitnet-core = { path = "../bitnet-core", version = ">=0.1.0, <0.3.0" }
bitnet-quant = { path = "../bitnet-quant", version = ">=0.1.0, <0.3.0" }
# bitnet-inference = { path = "../bitnet-inference", version = "0.1.0" }
# bitnet-training = { path = "../bitnet-training", version = "0.1.0" }
# bitnet-benchmarks = { path = "../bitnet-benchmarks", version = "0.1.0", optional = true }

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"

# Core dependencies
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# File handling
safetensors = { version = "0.4", optional = true }
hf-hub = "0.3"

# Utilities
tracing = { workspace = true }
tracing-subscriber = "0.3"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Async support
tokio = { workspace = true, features = ["full"] }

# Configuration
config = "0.14"
dirs = "5.0"

[dev-dependencies]
criterion.workspace = true
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
