[package]
name = "bitnet-cli"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for BitNet model operations"
keywords = ["bitnet", "cli", "neural-networks", "command-line"]
categories = ["science", "command-line-utilities"]

[[bin]]
name = "bitnet"
path = "src/main.rs"

[features]
default = ["full"]
# Enable all features (temporarily reduced due to dependency issues)
full = ["conversion", "inference"]
# Enable inference commands 
inference = ["bitnet-inference/generation", "bitnet-inference/tokenizers"]
# Enable training commands (temporarily disabled due to dependency issues)
# training = ["bitnet-training/qat", "bitnet-training/peft"]
# Enable model conversion
conversion = ["dep:safetensors"]
# Enable benchmarking commands (temporarily disabled due to dependency issues)
# benchmark = ["bitnet-benchmarks"]
# Enable Metal acceleration (temporarily disabled due to dependency issues)
# metal = ["bitnet-inference/metal", "bitnet-training/metal"]

[dependencies]
bitnet-core = { path = "../bitnet-core", version = "1.0.0" }
bitnet-quant = { path = "../bitnet-quant", version = "1.0.0" }
bitnet-inference = { path = "../bitnet-inference", version = "1.0.0" }
# bitnet-training = { path = "../bitnet-training", version = "^1.0" }
# bitnet-benchmarks = { path = "../bitnet-benchmarks", version = "^1.0", optional = true }

# CLI framework
clap = { version = "4.0", features = ["derive", "env"] }
clap_complete = "4.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Core dependencies
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Serialization and configuration
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Directories and utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
env_logger = "0.10"

# Optional model conversion formats
safetensors = { version = "0.4", optional = true }

[dev-dependencies]
criterion.workspace = true
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
