[package]
name = "bitnet-core"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core BitNet implementation with fundamental data structures and algorithms"
keywords = ["bitnet", "quantization", "neural-networks", "core"]
categories = ["science"]

[features]
default = ["std"]
std = []
# Enable parallel processing
parallel = ["dep:rayon"]
# Enable tracing for debugging
tracing = ["dep:tracing"]
# Enable SIMD optimizations
simd = ["candle-core/cuda"]
# Enable Metal GPU support (macOS only)
metal = ["candle-core/metal", "dep:metal"]
# Enable MLX support (Apple Silicon only)
mlx = ["dep:mlx-rs"]
# Enable both Metal and MLX for maximum Apple Silicon performance
apple-silicon = ["metal", "mlx"]
# Enable backtrace capture for debugging
backtrace = ["dep:backtrace"]
# Enable tokenizer support
tokenizers = ["dep:tokenizers"]

[dependencies]
# Core tensor operations
candle-core.workspace = true
candle-nn = "0.8"

# Serialization
serde.workspace = true
serde_json = "1.0"

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
num-traits = "0.2"
bytemuck = "1.0"
half = "2.0"
libc = "0.2"
crossbeam-channel = "0.5"
num_cpus = "1.0"
once_cell = "1.19"

# Optional dependencies
rayon = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
metal = { workspace = true, optional = true }
mlx-rs = { workspace = true, optional = true }
backtrace = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27.0"
objc = { workspace = true }
cocoa = { workspace = true }
core-foundation = { workspace = true }
core-graphics = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
approx = "0.5"
rand = "0.8"
tempfile = "3.0"
