[package]
name = "bitnet-inference"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-performance inference engine for BitNet models"
keywords = ["bitnet", "inference", "neural-networks", "text-generation"]
categories = ["science"]

[features]
default = ["std", "tokenizers", "metal", "simd", "batching", "streaming"]
std = []
# Enable tokenization
tokenizers = ["dep:tokenizers"]
# Enable text generation utilities
generation = ["dep:rand"]
# Enable batch processing (rayon is always available now)
batching = []
# Enable streaming inference (tokio is always available now)
streaming = []
# Enable Metal acceleration 
metal = ["dep:bitnet-metal"]
# Enable MLX acceleration for Apple Silicon
mlx = ["dep:mlx-rs"]
# Enable MLX-accelerated inference
mlx-inference = ["mlx", "generation"]
# Enable Apple Silicon optimizations (MLX + Metal when available)
apple-silicon = ["mlx", "metal"]
# Enable SIMD optimizations
simd = []
# Enable benchmarking features
benchmarks = ["dep:criterion"]

[dependencies]
bitnet-core = { path = "../bitnet-core", version = "1.0.0" }
bitnet-quant = { path = "../bitnet-quant", version = "1.0.0" }
bitnet-metal = { path = "../bitnet-metal", version = "1.0.0", optional = true }

# Core dependencies
candle-core.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Tokenization
tokenizers = { workspace = true, optional = true }

# Text generation
rand = { version = "0.8", optional = true }

# Performance and parallelization
rayon = { workspace = true }
tokio = { workspace = true, features = ["full"] }
parking_lot = "0.12"
num_cpus = "1.16"

# MLX acceleration
mlx-rs = { workspace = true, optional = true }

# Advanced inference dependencies
bincode = "1.3"
lru = "0.12"
memmap2 = "0.9"
crossbeam-channel = "0.5"
serde_json = "1.0"

# Streaming dependencies
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Benchmarking (optional)
criterion = { version = "0.5", optional = true }

# Utilities
tracing = { workspace = true }
tracing-subscriber = "0.3"
uuid = "1.0"

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-test = "0.4"
approx = "0.5"
tempfile = "3.0"
futures = "0.3"

[[bench]]
name = "inference_benchmarks"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "backend_performance_comparison"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "performance_analysis"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "comprehensive_benchmarks"
harness = false
required-features = ["benchmarks"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
