[package]
name = "bitnet-quant"
version = "1.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "1.58-bit quantization engine for BitNet neural networks"
keywords = ["bitnet", "quantization", "compression", "neural-networks"]
categories = ["science", "compression"]

[features]
default = ["std", "calibration"]
std = []
# Enable quantization-aware training
qat = ["bitnet-core/tracing"]
# Enable calibration utilities
calibration = ["dep:rand", "dep:chrono", "dep:serde_json", "dep:bincode", "dep:rmp-serde", "dep:md5", "dep:num_cpus", "dep:flate2", "dep:tempfile"]
# Enable advanced quantization methods
advanced = ["dep:statrs"]
# Enable tracing support
tracing = ["dep:tracing"]
# Enable SIMD optimizations
simd = []
# Enable AVX2 optimizations (x86/x86_64)
avx2 = ["simd"]
# Enable AVX-512 optimizations (x86/x86_64)
avx512 = ["simd", "avx2"]
# Enable NEON optimizations (ARM/AArch64)
neon = ["simd"]
# Enable SVE optimizations (ARM/AArch64)
sve = ["simd", "neon"]
# Enable all SIMD optimizations
simd-all = ["simd", "avx2", "avx512", "neon", "sve"]
# Enable memory optimization features
memory-optimization = ["simd"]
# Enable phase 2 features (BitLinear layer)
phase-2 = ["simd", "memory-optimization"]
# Enable bitlinear integration features
bitlinear-integration = ["phase-2"]
# Enable complete bitlinear features
bitlinear-complete = ["bitlinear-integration", "simd-all"]
# Enable thread safety tests
thread-safety-tests = []
# Enable memory profiling features
memory-profiling = ["tracing"]

[dependencies]
# Bitnet crate dependencies
bitnet-core = { path = "../bitnet-core", version = "1.0.0" }

# Core dependencies
candle-core.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Quantization specific
num-traits = "0.2"
bytemuck = "1.0"
half = "2.0"

# Math utilities
ndarray = "0.15"
nalgebra = "0.32"

# Optional dependencies
rand = { version = "0.8", optional = true }
statrs = { version = "0.16", optional = true }
tracing = { workspace = true, optional = true }

# Calibration specific dependencies (required for the calibration feature)
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rmp-serde = { version = "1.0", optional = true }
md5 = { version = "0.7", optional = true }
num_cpus = { version = "1.0", optional = true }
flate2 = { version = "1.0", optional = true }
tempfile = { version = "3.0", optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
approx = "0.5"
rand = "0.8"

[[example]]
name = "round_clip_demo"
path = "../examples/round_clip_demo.rs"
