[package]
name = "bitnet-training"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Training and fine-tuning utilities for BitNet models"
keywords = ["bitnet", "training", "fine-tuning", "machine-learning"]
categories = ["science", "machine-learning"]

[features]
default = ["std"]
std = []
# Enable quantization-aware training
qat = ["bitnet-quant/qat"]
# Enable distributed training
distributed = ["dep:tokio"]
# Enable parameter-efficient fine-tuning
peft = ["dep:rand"]
# Enable dataset utilities
datasets = ["dep:arrow"]
# Enable Metal acceleration for training
metal = ["dep:bitnet-metal"]

[dependencies]
bitnet-core = { path = "../bitnet-core" }
bitnet-quant = { path = "../bitnet-quant" }
bitnet-inference = { path = "../bitnet-inference" }
bitnet-metal = { path = "../bitnet-metal", optional = true }

# Core dependencies
candle-core.workspace = true
candle-nn = "0.8"
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Training utilities
rand = { version = "0.8", optional = true }
tokio = { workspace = true, optional = true }

# Dataset handling
arrow = { version = "52.0", optional = true }
parquet = { version = "52.0", optional = true }

# Optimization
rayon = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Metrics and logging
tch = { version = "0.13", optional = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
